feat: Ajustes formulario y estructura de escalas udistrital/sga_documentacion#497

--- a/src/app/components/definir-escalas/definir-escalas.component.html
+++ b/src/app/components/definir-escalas/definir-escalas.component.html
@@ -4,7 +4,7 @@
     </mat-card-header>
 
     <mat-card-content>
-        <!-- Grupo de tabs para Listado y Formulario -->
+        <!-- Grupo de tabs para Listado, Formulario y Vista de Escala -->
         <mat-tab-group [(selectedIndex)]="activeTab" (selectedTabChange)="tabChanged($event)">
             <!-- Pestaña de Lista -->
             <mat-tab label="{{ 'GLOBAL.lista' | translate }}">
@@ -12,7 +12,7 @@
                     <mat-card-content>
                         <!-- Buscador -->
                         <mat-form-field class="form-field">
-                            <mat-icon matPrefix>search</mat-icon> <!-- Ícono de lupa -->
+                            <mat-icon matPrefix>search</mat-icon>
                             <mat-label>{{ "GLOBAL.buscar" | translate }}</mat-label>
                             <input matInput type="text" (keyup)="applyFilterEscalas($event)"
                                 placeholder="{{ 'GLOBAL.buscar' | translate }}" />
@@ -24,14 +24,13 @@
                                 <mat-icon>add</mat-icon> <!-- Ícono de más para añadir escala -->
                             </button>
                             <span>{{ "definir_escalas.aniadir_nueva_escala" | translate }}</span>
-                            <!-- Texto "Añadir nueva escala" -->
                         </mat-toolbar>
 
                         <!-- Tabla de escalas existentes -->
                         <table mat-table [dataSource]="dataSource" matSort class="full-width-table">
                             <!-- Columnas de la tabla -->
-                            <ng-container matColumnDef="Tipo">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "definir_escalas.tipo_escala" |
+                            <ng-container matColumnDef="Pregunta">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "definir_escalas.pregunta" |
                                     translate }}</th>
                                 <td mat-cell *matCellDef="let escala">{{ escala.label }}</td>
                             </ng-container>
@@ -53,9 +52,8 @@
                                 <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "GLOBAL.estado" | translate }}
                                 </th>
                                 <td mat-cell *matCellDef="let escala">
-                                    <div [ngClass]="escala.activo ? 'status-active' : 'status-inactive'">
-                                        {{ escala.activo ? 'Activo' : 'Inactivo' }}
-                                    </div>
+                                    <div [ngClass]="escala.activo ? 'status-active' : 'status-inactive'">{{
+                                        escala.activo ? 'Activo' : 'Inactivo' }}</div>
                                 </td>
                             </ng-container>
 
@@ -77,7 +75,6 @@
                                         </button>
                                     </mat-menu>
                                 </td>
-
                             </ng-container>
 
                             <!-- Filas -->
@@ -105,7 +102,7 @@
                             <h3>{{ "definir_escalas.formulario_creacion" | translate }}</h3>
                             <form [formGroup]="formularioEscala">
                                 <mat-form-field class="full-width">
-                                    <mat-label>{{ "definir_escalas.tipo_escala" | translate }}</mat-label>
+                                    <mat-label>{{ "Escriba su pregunta" | translate }}</mat-label>
                                     <input matInput formControlName="label" />
                                 </mat-form-field>
 
@@ -115,12 +112,31 @@
                                 </mat-form-field>
 
                                 <mat-form-field class="full-width">
-                                    <mat-label>{{ "definir_escalas.tipo_input" | translate }}</mat-label>
-                                    <mat-select formControlName="tipoCampo">
+                                    <mat-label>{{ "Seleccionar tipo de escala" | translate }}</mat-label>
+                                    <mat-select formControlName="tipoCampo"
+                                        (selectionChange)="onTipoCampoChange($event)">
                                         <mat-option *ngFor="let tipo of tipoCampos" [value]="tipo.label">{{ tipo.label
                                             }}</mat-option>
                                     </mat-select>
                                 </mat-form-field>
+
+                                <!-- Opciones adicionales cuando el tipo de campo es 'Selección Múltiple' -->
+                                <div *ngIf="showMultipleOptions" formArrayName="opciones">
+                                    <div *ngFor="let opcion of opciones.controls; let i = index">
+                                        <mat-form-field class="full-width">
+                                            <mat-label>{{ 'Opción ' + (i + 1) }}</mat-label>
+                                            <input matInput [formControlName]="i" />
+                                        </mat-form-field>
+                                    </div>
+                                    <div>
+                                        <button mat-mini-fab color="primary" (click)="agregarOpcion()">
+                                            <mat-icon>add</mat-icon>
+                                        </button>
+                                        <button mat-mini-fab color="warn" (click)="quitarOpcion()">
+                                            <mat-icon>remove</mat-icon>
+                                        </button>
+                                    </div>
+                                </div>
 
                                 <!-- Botones de acción -->
                                 <button mat-flat-button color="primary" (click)="agregarEscala()">
@@ -136,6 +152,41 @@
                     </mat-card-content>
                 </mat-card>
             </mat-tab>
+
+
+            <!-- Pestaña de Vista de Escala -->
+            <mat-tab label="{{ 'definir_escalas.vista_escala' | translate }}" *ngIf="isViewingScale">
+                <mat-card>
+                    <mat-card-content>
+                        <h3 class="title">{{ "definir_escalas.vista_escala" | translate }}</h3>
+
+                        <!-- Información de la escala -->
+                        <div class="vista-escala">
+                            <p><strong>{{ "Pregunta: " }}</strong> {{ escalaSeleccionada.label }}</p>
+                            <p><strong>{{ "Descripción: " }}</strong> {{ escalaSeleccionada.descripcion }}</p>
+                            <p><strong>{{ "Tipo de Escala: " }}</strong> {{ escalaSeleccionada.tipoCampo }}</p>
+                            <p><strong>{{ "Estado: " }}</strong> {{ escalaSeleccionada.activo ? 'Activo' : 'Inactivo' }}
+                            </p>
+                            <p><strong>{{ "Fecha de Creación: " }}</strong> {{ escalaSeleccionada.fechaCreacion }}</p>
+
+                            <!-- Mostrar opciones si es selección múltiple -->
+                            <div *ngIf="escalaSeleccionada.tipoCampo === 'Selección Múltiple'">
+                                <p><strong>{{ "Opciones: " }}</strong></p>
+                                <ul>
+                                    <li *ngFor="let opcion of escalaSeleccionada.opciones">{{ opcion }}</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <!-- Botón de regresar a la lista -->
+                        <button mat-flat-button color="primary" (click)="regresarLista()">
+                            <mat-icon>arrow_back</mat-icon> <!-- Ícono de regresar -->
+                            {{ "GLOBAL.regresar" | translate }}
+                        </button>
+                    </mat-card-content>
+                </mat-card>
+            </mat-tab>
+
         </mat-tab-group>
     </mat-card-content>
 </mat-card>
